adding aria labels to img links and alt text to logos

--- a/takingstock.html
+++ b/takingstock.html
@@ -37,11 +37,11 @@
         href="https://www.youtube.com/playlist?list=PL1a4hwPuRe1Cz_fe6RdT8VwDVOaahxi-F"
         aria-label="YouTube"
         >
-        <img src="./images/youtube.svg" />
+        <img atl="YouTube logo" src="./images/youtube.svg" />
         <a
           href="https://www.encouragingproductions.com/"
           aria-label="encouragingproductions.com"
-          ><img src="./images/logo.png"
+          ><img alt ="Encouraging Productions logo" src="./images/logo.png"
         /></a>
       </div>
     </header>
@@ -53,7 +53,8 @@
       <div class="img_gallery">
       <div class="image-wrapper">
         <div class="img_tile">
-          <a href="https://www.youtube.com/watch?v=Dy2SyTMfmQM">
+          <a href="https://www.youtube.com/watch?v=Dy2SyTMfmQM"
+          aria-label="Link to YouTube video - Taking Stock #2 - Thank You, Michael">
           <div class="img_overlay"></div>
           <img class="resize"
             src="./images/image5.png"
@@ -68,7 +69,8 @@
         </div>
         <div class="image-wrapper">
         <div class="img_tile">
-          <a href="https://www.youtube.com/watch?v=UoRWgyTJ9kU">
+          <a href="https://www.youtube.com/watch?v=UoRWgyTJ9kU"
+          aria-label="Link to YouTube video - Taking Stock #5 - Standard Tasks">
           <div class="img_overlay"></div>
           <img
             src="./images/image2.png"
@@ -83,6 +85,7 @@
         </div>
         <div class="image-wrapper">
         <div class="img_tile">
+          
           <div class="img_overlay"></div>
           <img
             src="./images/image12.png"
@@ -96,7 +99,8 @@
         </div>
         <div class="image-wrapper">
         <div class="img_tile">
-          <a href="https://www.youtube.com/watch?v=f44YFPjaoVc">
+          <a href="https://www.youtube.com/watch?v=f44YFPjaoVc"
+            aria-label="Link to YouTube video - Taking Stock #4 - Follow Your Dreams">
           <div class="img_overlay"></div>
           <img
             src="./images/image7.png"
@@ -111,7 +115,8 @@
       </div>
       <div class="image-wrapper">
         <div class="img_tile">
-          <a href="https://www.youtube.com/watch?v=Sv9AM3f8eh4">
+          <a href="https://www.youtube.com/watch?v=Sv9AM3f8eh4"
+            aria-label="Link to YouTube video - Taking Stock #8 - Gap In Your Employment History">
           <div class="img_overlay"></div>
           <img
             src="./images/image10.png"
@@ -126,7 +131,8 @@
       </div>
         <div class="image-wrapper">
           <div class="img_tile">
-            <a href="https://www.youtube.com/watch?v=IFDe581_Rhk">
+            <a href="https://www.youtube.com/watch?v=IFDe581_Rhk"
+              aria-label="Link to YouTube video - Taking Stock #1 - Stealing is Stealing">
              <div class="img_overlay"></div>
             <img
               src="./images/image8.png"
@@ -141,7 +147,8 @@
           </div>
           <div class="image-wrapper">
             <div class="img_tile">
-              <a href="https://www.youtube.com/watch?v=SL0WNQmeYRU">
+              <a href="https://www.youtube.com/watch?v=SL0WNQmeYRU"
+                aria-label="Link to YouTube video - Taking Stock #7 - Just a Quick, Polite, Reminder">
                <div class="img_overlay"></div>
               <img
                 src="./images/image1.png"
@@ -156,7 +163,8 @@
             </div>
         <div class="image-wrapper">
         <div class="img_tile">
-          <a href="https://www.youtube.com/watch?v=gJFBggovrgQ">
+          <a href="https://www.youtube.com/watch?v=gJFBggovrgQ"
+          aria-label="Link to YouTube video - Taking Stock #9 - Productivity">
            <div class="img_overlay"></div>
           <img
             src="./images/image6.png"
@@ -171,7 +179,9 @@
         </div>
         <div class="image-wrapper">
         <div class="img_tile">
-          <a href="https://www.youtube.com/watch?v=G9iFm9pAHYk">
+          <a href="https://www.youtube.com/watch?v=G9iFm9pAHYk"
+            aria-label="Link to YouTube video - Taking Stock #6 - It's My Job To Win New Clients
+            ">
           <div class="img_overlay"></div>
           <img
             src="./images/image11.png"
@@ -186,7 +196,9 @@
         </div>
         <div class="image-wrapper">
         <div class="img_tile">
-          <a href="https://www.youtube.com/watch?v=NX61XLNJTvQ">
+          <a href="https://www.youtube.com/watch?v=NX61XLNJTvQ"
+            aria-label="Link to YouTube video - Taking Stock #3 - I Tell My Wife I'm a Doctor
+            ">
           <div class="img_overlay"></div>
           <img
             src="./images/image4.png"
